--- a/examples/streaming-service/package.json
+++ b/examples/streaming-service/package.json
@@ -8,5 +8,8 @@
     "dev:client": "vite --config vite.config.js",
     "build": "npm-run-all build:*",
     "build:client": "vite build"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.2"
   }
 }
